--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,15 +4,15 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin [ACCOUNT_ID].dkr.ecr.[REGION].amazonaws.com
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin 351556823156.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t gmail-finance-manager .
-      - docker tag gmail-finance-manager:latest [ACCOUNT_ID].dkr.ecr.[REGION].amazonaws.com/gmail-finance-manager:latest
+      - docker tag gmail-finance-manager:latest 351556823156.dkr.ecr.us-east-1.amazonaws.com/gmail-finance-manager:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push [ACCOUNT_ID].dkr.ecr.[REGION].amazonaws.com/gmail-finance-manager:latest
+      - docker push 351556823156.dkr.ecr.us-east-1.amazonaws.com/gmail-finance-manager:latest
